fix: response to Nick's review comment

--- a/modules/administration-guide/partials/proc_manually-upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/partials/proc_manually-upgrading-che-7-41-on-openshift.adoc
@@ -16,7 +16,7 @@ You can manually upgrade {prod-prev-short} {prod-last-version-pre-dwo} on OpenSh
 ** `jq`
 * The host running the upgrade commands is running on Linux.
 * Optional:
-.. All changes from all workspaces have been commited and pushed to their Git remotes.
+.. All changes from all workspaces have been committed and pushed to their Git remotes.
 .. All workspaces have been stopped to avoid UX degradation.
 .. The {prod-prev-short} data have been backed up. See {prod-docs-url-backup-recovery}.
 
@@ -61,18 +61,12 @@ export PRE_MIGRATION_PRODUCT_SUBSCRIPTION_NAME={pre-migration-prod-subscription}
 <1> `{prod-namespace}` or another {orch-namespace} where {prod-prev-short} was previously installed.
 <2> `{prod-namespace}` or another {orch-namespace} where {prod-prev-short} was previously installed.
 
-. Run `chmod` on the upgrade scripts:
-+
-[source,terminal]
-----
-$ chmod +x ./1-prepare.sh ./2-migrate.sh ./3-subscribe.sh ./4-wait.sh
-----
-
 . Run the upgrade scripts:
 +
 [source,terminal]
 ----
-$ ./1-prepare.sh && ./2-migrate.sh && ./3-subscribe.sh && ./4-wait.sh
+$ chmod +x ./1-prepare.sh ./2-migrate.sh ./3-subscribe.sh ./4-wait.sh; \
+  ./1-prepare.sh && ./2-migrate.sh && ./3-subscribe.sh && ./4-wait.sh
 ----
 
 .Verification
