--- a/modules/administration-guide/partials/proc_rolling-the-upgrade-back-to-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/partials/proc_rolling-the-upgrade-back-to-che-7-41-on-openshift.adoc
@@ -32,18 +32,11 @@ export PRE_MIGRATION_PRODUCT_OLM_STARTING_CSV={pre-migration-prod-starting-csv}
 <1> `{prod-namespace}` or another {orch-namespace} where {prod-prev-short} was previously installed.
 <2> `{prod-namespace}` or another {orch-namespace} where {prod-prev-short} was previously installed.
 
-. Run `chmod` on the `rollback.sh` script:
-+
-[source,terminal]
-----
-$ chmod +x ./rollback.sh
-----
-
 . Run the `rollback.sh` script.
 +
 [source,terminal]
 ----
-$ ./rollback.sh
+$ chmod +x ./rollback.sh; ./rollback.sh
 ----
 
 .Verification
