procedure: first draft

--- a/modules/end-user-guide/pages/selecting-an-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-an-ide.adoc
@@ -2,7 +2,7 @@
 :navtitle: Selecting an IDE
 :description: Selecting an IDE
 :keywords: user-guide, selecting, IDE
-:page-aliases: che-theia-ide-basics, version-control, using-alternative-ides-in-che, configuring-a-workspace-to-use-an-ide-based-on-the-intellij-platform, building-images-for-ides-based-on-the-intellij-platform, provisioning-the-jetbrains-offline-activation-code, support-for-theia-based-ides, che-theia-troubleshooting, differences-in-how-che-theia-webview-works-on-a-single-host-mode-comparing-to-a-multi-host-mode
+:page-aliases: select, selecting, editor, ide, vs-code, visual-studio, visual-studio-code, jetbrains, intellij, pycharm, theia, che-theia
 
 :parent-context-of-selecting-an-ide: {context}
 
@@ -12,11 +12,6 @@
 :context: selecting-an-ide
 
 When you start a {prod-short} workspace, you can use the default IDE, link:https://theia-ide.org/docs/[Eclipse Theia], or select one of the following alternatives:
-
-* JetBrains link:https://www.jetbrains.com/help/idea/getting-started.html[IntelliJ IDEA]
-* JetBrains link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[PyCharm]
-* Visual Studio Code link:https://github.com/Microsoft/vscode/[Open Source ("Code - OSS")]
-* An IDE that you defined by using the `inline` directive
 
 When starting a workspace, you can select an IDE by using one of the two following options:
 
@@ -34,13 +29,6 @@ include::partial$proc_using-a-custom-plug-in-registry-for-your-ide.adoc[leveloff
 include::partial$proc_using-a-web-reference-for-your-ide.adoc[leveloffset=+1]
 
 include::partial$proc_using-an-embedded-editor-definition-for-your-ide.adoc[leveloffset=+1]
-
-.Additional resources
-
-* link:https://theia-ide.org/docs/[Eclipse Theia Docs]
-* link:https://www.jetbrains.com/help/idea/getting-started.html[JetBrains IntelliJ IDEA]
-* link:https://www.jetbrains.com/help/pycharm/quick-start-guide.html[JetBrains PyCharm]
-* link:https://github.com/Microsoft/vscode/[Visual Studio Code - Open Source ("Code - OSS")]
 
 :context: {parent-context-of-selecting-an-ide}
 
