fix: response to SMEs reviews

--- a/modules/administration-guide/examples/proc_che-manually-upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/examples/proc_che-manually-upgrading-che-7-41-on-openshift.adoc
@@ -61,6 +61,7 @@ export PRE_MIGRATION_PRODUCT_SUBSCRIPTION_NAME={pre-migration-prod-subscription}
 <1> `{prod-namespace}` or another {orch-namespace} where {prod-prev-short} was previously installed.
 <2> `{prod-namespace}` or another {orch-namespace} where {prod-prev-short} was previously installed.
 
+
 . Run the upgrade scripts:
 +
 [source,terminal]
@@ -71,6 +72,6 @@ $ chmod +x ./1-prepare.sh ./2-migrate.sh ./3-subscribe.sh ./4-wait.sh; \
 
 .Verification
  
-* In the {prod-short} dashboard, go to menu:About[Server Version] to verify that it is *{prod-ver}*.
+* In the {prod-short} dashboard, go to menu:About[Server Version] to verify that it is *7.49*.
 
 :context: {parent-context-upgrading-of-che-7-41-on-openshift}
