--- a/modules/administration-guide/examples/proc_che-rolling-the-upgrade-back-to-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/examples/proc_che-rolling-the-upgrade-back-to-che-7-41-on-openshift.adoc
@@ -5,7 +5,7 @@
 [id="rolling-the-upgrade-back-to-{prod-prev-id-short}-{prod-last-version-pre-dwo}-on-openshift_{context}"]
 = Rolling the upgrade back to {prod-prev-short} {prod-last-version-pre-dwo} on OpenShift
 
-If upgrading to {prod-short} {prod-ver} on OpenShift fails, you can run a rollback script to restore {prod-last-version-pre-dwo}.
+If upgrading to {prod-short} 7.49 on OpenShift fails, you can run a rollback script to restore {prod-last-version-pre-dwo}.
 
 .Procedure
 
