--- a/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
@@ -7,7 +7,7 @@
 [id="upgrading-{prod-prev-id-short}-{prod-last-version-pre-dwo}-on-openshift_{context}"]
 = Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on OpenShift
 
-The workspace engine and authentication system used in {prod-prev-short} {prod-last-version-pre-dwo} and earlier versions are deprecated. Due to this deprecation, upgrading {prod-prev-short} {prod-last-version-pre-dwo} to {prod-short} {prod-ver} involves running upgrade scripts.
+The workspace engine and authentication system used in {prod-prev-short} {prod-last-version-pre-dwo} and earlier versions are deprecated. Due to this deprecation, upgrading {prod-prev-short} {prod-last-version-pre-dwo} involves running upgrade scripts.
 
-include::partial$proc_manually-upgrading-che-7-41-on-openshift.adoc[leveloffset=+1]
-include::partial$proc_rolling-the-upgrade-back-to-che-7-41-on-openshift.adoc[leveloffset=+1]
+include::example$proc_{project-context}-manually-upgrading-che-7-41-on-openshift.adoc[leveloffset=+1]
+include::example$proc_{project-context}-rolling-the-upgrade-back-to-che-7-41-on-openshift.adoc[leveloffset=+1]
