fix: first draft, looks like i need a separate proc module

--- a/modules/administration-guide/pages/upgrading-che.adoc
+++ b/modules/administration-guide/pages/upgrading-che.adoc
@@ -13,4 +13,6 @@
 
 This chapter describes how to upgrade from {prod-prev-short} {prod-prev-ver} to {prod-short} {prod-ver}.
 
+include::example$snip_{project-context}-upgrading-post-dwo.adoc[]
+
 :context: {parent-context-of-upgrading-che}
