--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -70,6 +70,7 @@
 *** xref:removing-user-data.adoc[]
 * xref:managing-workloads-using-the-che-server-api.adoc[]
 * xref:upgrading-che.adoc[]
+** xref:upgrading-che-7-41-on-openshift.adoc[]
 ** xref:upgrading-the-chectl-management-tool.adoc[]
 ** xref:specifying-the-update-approval-strategy.adoc[]
 ** xref:upgrading-che-using-the-web-console.adoc[]
