fix: Add Red Hat to OpenShift

--- a/modules/administration-guide/examples/proc_che-manually-upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/examples/proc_che-manually-upgrading-che-7-41-on-openshift.adoc
@@ -3,13 +3,13 @@
 :parent-context-upgrading-of-che-7-41-on-openshift: {context}
 
 [id="manually-upgrading-{prod-prev-id-short}-{prod-last-version-pre-dwo}-on-openshift_{context}"]
-= Manually upgrading {prod-prev-short} {prod-last-version-pre-dwo} on OpenShift
+= Manually upgrading {prod-prev-short} {prod-last-version-pre-dwo} on Red Hat OpenShift
 
-You can manually upgrade {prod-prev-short} {prod-last-version-pre-dwo} on OpenShift.
+You can manually upgrade {prod-prev-short} {prod-last-version-pre-dwo} on Red Hat OpenShift.
 
 .Prerequisites
 
-* An instance of {prod-prev-short} deployed on one of the xref:supported-platforms.adoc[]. The instance uses the default internal PostgreSQL database and has OpenShift OAuth enabled. See {prod-docs-url-enable-oauth}.
+* An instance of {prod-prev-short} deployed on one of the xref:supported-platforms.adoc[]. The instance uses the default internal PostgreSQL database and has OAuth enabled on Red Hat OpenShift. See {prod-docs-url-enable-oauth}.
 * The following command line tools are available:
 ** `oc`
 ** `curl`
