--- a/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
@@ -1,11 +1,11 @@
 :_content-type: ASSEMBLY
-:navtitle: Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on OpenShift
-:description: Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on OpenShift
+:navtitle: Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on Red Hat OpenShift
+:description: Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on Red Hat OpenShift
 :keywords: administration-guide, migration, devworkspace, upgrade, upgrading
 :page-aliases: 
 
 [id="upgrading-{prod-prev-id-short}-{prod-last-version-pre-dwo}-on-openshift_{context}"]
-= Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on OpenShift
+= Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on Red Hat OpenShift
 
 The workspace engine and authentication system used in {prod-prev-short} {prod-last-version-pre-dwo} and earlier versions are deprecated. Due to this deprecation, upgrading {prod-prev-short} {prod-last-version-pre-dwo} involves running upgrade scripts.
 
