docs: backporting PR 2391

--- a/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
@@ -1,130 +1,14 @@
-:_content-type: PROCEDURE
-:navtitle: Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on OpenShift
-:description: Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on OpenShift
-:keywords: administration-guide, migration, devworkspace
+:_content-type: ASSEMBLY
+:navtitle: Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on Red Hat OpenShift
+:description: Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on Red Hat OpenShift
+:keywords: administration-guide, migration, devworkspace, upgrade, upgrading
 :page-aliases: 
 
 [id="upgrading-{prod-prev-id-short}-{prod-last-version-pre-dwo}-on-openshift_{context}"]
-= Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on OpenShift
+= Upgrading {prod-prev-short} {prod-last-version-pre-dwo} on Red Hat OpenShift
 
-The workspace engine and authentication system used up to and including {prod-prev-short} version {prod-last-version-pre-dwo} are deprecated, which requires manual steps.
+The workspace engine and authentication system used in {prod-prev-short} {prod-last-version-pre-dwo} and earlier versions are deprecated. Due to this deprecation, upgrading {prod-prev-short} {prod-last-version-pre-dwo} involves running upgrade scripts.
 
-.Prerequisites
+include::example$proc_{project-context}-manually-upgrading-che-7-41-to-7-49-on-openshift.adoc[leveloffset=+1]
 
-* An instance of {prod-prev-short} deployed on one of the xref:supported-platforms.adoc[]. The instance uses the default internal PostgreSQL database and has OpenShift OAuth enabled. See {prod-docs-url-enable-oauth}.
-* The following command line tools are available:
-** `oc`
-** `curl`
-** `jq`
-* The host running the upgrade commands is running on Linux.
-* Optional:
-.. All changes from all workspaces have been commited and pushed to their Git remotes.
-.. All workspaces have been stopped to avoid UX degradation.
-.. The {prod-prev-short} data have been backed up. See {prod-docs-url-backup-recovery}.
-
-.Procedure
-
-. Download xref:attachment$migration/1-prepare.sh[1-prepare.sh].
-+
-`1-prepare.sh` is a migration script that shuts down {prod-prev-short} and {identity-provider}, fetches users data, and dumps the {prod-short} database.
-
-. Download xref:attachment$migration/2-migrate.sh[2-migrate.sh].
-+
-`2-migrate.sh` is a migration script that fetches {prod-prev-short} {identity-provider} and database data, and repopulates the database with updated data.
-
-. Download xref:attachment$migration/3-subscribe.sh[3-subscribe.sh].
-+
-`3-subscribe.sh` is a migration script that deletes {prod-prev-short} Operator and {identity-provider} resources, updates the CheCluster CR, and creates a new {prod-short} Operator subscription.
-
-. Download xref:attachment$migration/4-wait.sh[4-wait.sh].
-+
-`4-wait.sh` is a migration script that waits until {prod-short} is ready, which can take more than 5 minutes.
-
-. Set the environment variables to use in the migration scripts:
-+
-[source,bash,subs="+attributes"]
-----
-export INSTALLATION_NAMESPACE={prod-namespace} # <1>
-export PRODUCT_ID={prod-id}
-export PRODUCT_DEPLOYMENT_NAME={prod-deployment}
-export PRODUCT_OPERATOR_NAME={prod-operator}
-export PRODUCT_OLM_STABLE_CHANNEL={prod-stable-channel}
-export PRODUCT_OLM_CATALOG_SOURCE={prod-stable-channel-catalog-source}
-export PRODUCT_OLM_PACKAGE={prod-stable-channel-package}
-export PRODUCT_OLM_STARTING_CSV={prod-stable-channel-starting-csv}
-export PRE_MIGRATION_PRODUCT_OPERATOR_NAMESPACE={prod-namespace} # <2>
-export PRE_MIGRATION_PRODUCT_SHORT_ID={pre-migration-prod-id-short}
-export PRE_MIGRATION_PRODUCT_DEPLOYMENT_NAME={pre-migration-prod-deployment}
-export PRE_MIGRATION_PRODUCT_OPERATOR_NAME={pre-migration-prod-operator}
-export PRE_MIGRATION_PRODUCT_CHE_CLUSTER_CR_NAME={pre-migration-prod-checluster}
-export PRE_MIGRATION_PRODUCT_IDENTITY_PROVIDER_DEPLOYMENT_NAME={identity-provider-id}
-export PRE_MIGRATION_PRODUCT_SUBSCRIPTION_NAME={pre-migration-prod-subscription}
-----
-<1> `{prod-namespace}` or another {orch-namespace} where {prod-prev-short} was previously installed.
-<2> `{prod-namespace}` or another {orch-namespace} where {prod-prev-short} was previously installed.
-
-. Run `chmod` on the downloaded scripts:
-+
-[source,terminal]
-----
-$ chmod +x ./1-prepare.sh ./2-migrate.sh ./3-subscribe.sh ./4-wait.sh
-----
-
-. Run the migration scripts:
-+
-[source,terminal]
-----
-$ ./1-prepare.sh && ./2-migrate.sh && ./3-subscribe.sh && ./4-wait.sh
-----
-
-.Verification
-
-* Open {prod-short} dashboard and log in.
-
-[IMPORTANT]
-====
-If migration fails, use the following steps to roll back to the pre-migration {prod-prev-short} state.
-
-. Set the environment variables to use in the migration scripts:
-+
-[source,bash,subs="+attributes"]
-----
-export INSTALLATION_NAMESPACE={prod-namespace} # <1>
-export PRODUCT_ID={prod-id}
-export PRODUCT_SHORT_ID={prod-id-short}
-export PRODUCT_DEPLOYMENT_NAME={prod-deployment}
-export PRE_MIGRATION_PRODUCT_OPERATOR_NAMESPACE={prod-namespace} # <2>
-export PRE_MIGRATION_PRODUCT_DEPLOYMENT_NAME={pre-migration-prod-deployment}
-export PRE_MIGRATION_PRODUCT_SUBSCRIPTION_NAME={pre-migration-prod-subscription}
-export PRE_MIGRATION_PRODUCT_CHE_CLUSTER_CR_NAME={pre-migration-prod-checluster}
-export PRE_MIGRATION_PRODUCT_OPERATOR_NAME={pre-migration-prod-operator}
-export PRE_MIGRATION_PRODUCT_OLM_PACKAGE={pre-migration-prod-package}
-export PRE_MIGRATION_PRODUCT_OLM_CHANNEL={pre-migration-prod-channel}
-export PRE_MIGRATION_PRODUCT_OLM_CATALOG_SOURCE={pre-migration-prod-catalog-source}
-export PRE_MIGRATION_PRODUCT_OLM_STARTING_CSV={pre-migration-prod-starting-csv}
-----
-<1> `{prod-namespace}` or another {orch-namespace} where {prod-prev-short} was previously installed.
-<2> `{prod-namespace}` or another {orch-namespace} where {prod-prev-short} was previously installed.
-
-. Download the xref:attachment$migration/rollback.sh[rollback.sh] script.
-
-. Run `chmod` on the `rollback.sh` script:
-+
-[source,terminal]
-----
-$ chmod +x ./rollback.sh
-----
-
-. Run the `rollback.sh` script.
-+
-[source,terminal]
-----
-$ ./rollback.sh
-----
-
-
-.Verification
-
-* Open {prod-prev-short} dashboard and log in.
-
-====
+include::example$proc_{project-context}-rolling-the-upgrade-back-from-che-7-49-to-che-7-41-on-openshift.adoc[leveloffset=+1]
