feat: add  flag to run  script
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/partials/snip_preparing-images-for-a-restricted-environment.adoc
+++ b/modules/administration-guide/partials/snip_preparing-images-for-a-restricted-environment.adoc
@@ -40,6 +40,7 @@ $ bash prepare-restricted-environment.sh \
   --prod_operator_bundle_name "{prod-operator-bundle-name}" \
   --prod_operator_package_name "{prod-operator-package-name}" \
   --prod_operator_version "v{prod-ver-patch}" \
-  --my_registry "__<my_registry>__"
+  --my_registry "__<my_registry>__" \
+  --my-catalog "__<my-catalog>__"
 ----
 
