docs: split optional-parameters-for-the-urls-for-starting-a-new-workspace into multiple pages

--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -7,6 +7,11 @@
 * xref:user-onboarding.adoc[]
 ** xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[]
 ** xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[]
+*** xref:url-parameter-concatenation.adoc[]
+*** xref:url-parameter-for-the-workspace-ide.adoc[]
+*** xref:url-parameter-for-starting-duplicate-workspaces.adoc[]
+*** xref:url-parameter-for-the-devfile-file-name.adoc[]
+*** xref:url-parameter-for-the-devfile-file-path.adoc[]
 ** xref:basic-actions-you-can-perform-on-a-workspace.adoc[]
 ** xref:authenticating-yourself-to-a-git-server-from-a-workspace.adoc[]
 * xref:customizing-workspace-components.adoc[]
