--- a/modules/end-user-guide/pages/selecting-an-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-an-ide.adoc
@@ -15,8 +15,8 @@ When you start a {prod-short} workspace, you can use the default IDE, link:https
 
 When starting a workspace, you can select an IDE by using one of the two following options:
 
-* URL parameter `che-editor`
-* `.che/che-editor.yaml` file
+* The `che-editor` URL parameter.
+* The `.che/che-editor.yaml` file.
 
 include::partial$proc_using-url-parameters-to-select-an-ide.adoc[leveloffset=+1]
 
