--- a/modules/end-user-guide/pages/url-parameter-for-the-workspace-ide.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-workspace-ide.adoc
@@ -17,4 +17,11 @@ The URL parameter for specifying another supported IDE is `che-editor=__<editor_
 pass:c,a,q[{prod-url}]#__<git_repository_url>__?che-editor=__<editor_key>__
 ----
 
-include::example$snip_{project-context}-editor-key-values.adoc[]
+.The URL parameter `__<editor_key>__` values for supported IDEs 
+
+|===
+| IDE | `__<editor_key>__` value | Note
+
+include::example$snip_{project-context}-table-of-supported-editors.adoc[]
+
+|===
