--- a/modules/end-user-guide/pages/customizing-workspace-components.adoc
+++ b/modules/end-user-guide/pages/customizing-workspace-components.adoc
@@ -13,6 +13,6 @@ To customize workspace components:
 
 * Use a devfile that meets the latest devfile 2 specification. See link:https://devfile.io/docs/devfile/2.1.0/user-guide/authoring-stacks/[Devfile User Guide].
 
-* xref:selecting-an-ide.adoc[Choose and customize your selected IDE].
+* xref:selecting-a-workspace-ide.adoc[Select and customize your in-browser IDE].
 
 * Add {prod-short} specific attributes in addition to the generic devfile specification.
