--- a/modules/administration-guide/pages/using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc
+++ b/modules/administration-guide/pages/using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc
@@ -11,7 +11,7 @@ To deploy {prod-short} with a suitable configuration, edit the `CheCluster` Cust
 
 .Prerequisites
 
-* An active `{orch-cli}` session with administrative permissions to the {orch-name} cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the {orch-name} CLI].
+* An active `{orch-cli}` session with administrative permissions to the {orch-name} cluster. See {orch-cli-link}.
 
 * `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
 
