--- a/modules/administration-guide/examples/proc_che-rolling-the-upgrade-back-from-che-7-49-to-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/examples/proc_che-rolling-the-upgrade-back-from-che-7-49-to-che-7-41-on-openshift.adoc
@@ -1,9 +1,9 @@
 :_content-type: PROCEDURE
 
-:parent-context-of-rolling-the-upgrade-back-to-{prod-prev-id-short}-{prod-last-version-pre-dwo}-on-openshift: {context}
+:parent-context-of-rolling-the-upgrade-back-to-che-7.41-on-red-hat-openshift: {context}
 
-[id="rolling-the-upgrade-back-to-{prod-prev-id-short}-{prod-last-version-pre-dwo}-on-openshift_{context}"]
-= Rolling the upgrade back to {prod-prev-short} {prod-last-version-pre-dwo} on Red Hat OpenShift
+[id="rolling-the-upgrade-back-to-che-7.41-on-red-hat-openshift_{context}"]
+= Rolling the upgrade back to 7.41 on Red Hat OpenShift
 
 If upgrading {prod-short} 7.41 to 7.49 on Red Hat OpenShift fails, you can run a rollback script to restore {prod-short} 7.41.
 
@@ -43,4 +43,4 @@ $ chmod +x ./rollback.sh; ./rollback.sh
 
 * In the {prod-prev-short} dashboard, go to menu:About[Server Version] to verify that it is *7.41*.
 
-:context: {parent-context-of-rolling-the-upgrade-back-to-{prod-prev-id-short}-{prod-last-version-pre-dwo}-on-openshift}
+:context: {parent-context-of-rolling-the-upgrade-back-to-che-7.41-on-red-hat-openshift}
