fix: response to Robert's review

--- a/modules/administration-guide/examples/proc_che-upgrading-che-7-41-to-latest-version-on-openshift.adoc
+++ b/modules/administration-guide/examples/proc_che-upgrading-che-7-41-to-latest-version-on-openshift.adoc
@@ -1,8 +1,8 @@
 :_content-type: PROCEDURE
 
-:parent-context-of-che-7.41-to-{prod-ver}-on-openshift: {context}
+:parent-context-of-che-7.41-to-{prod-ver}-on-red-hat-openshift: {context}
 
-[id="uprading-che-7.41-to-{prod-ver}-on-openshift_{context}"]
+[id="uprading-che-7.41-to-{prod-ver}-on-red-hat-openshift_{context}"]
 = Upgrading Che 7.41 to {prod-ver} on Red Hat OpenShift
 
 Upgrading Che 7.41 to {prod-ver} on Red Hat OpenShift requires first upgrading it to Che 7.49.
@@ -12,4 +12,4 @@ Upgrading Che 7.41 to {prod-ver} on Red Hat OpenShift requires first upgrading i
 . Manually upgrade Che 7.41 to 7.49.
 . Use link:https://docs.openshift.com/container-platform/4.10/operators/understanding/olm/olm-understanding-olm.html[Operator Lifecycle Manager] to update Che 7.49 to {prod-ver}.
 
-:context: {parent-context-of-upgrading-che-7.41-to-{prod-ver}-on-openshift}
+:context: {parent-context-of-upgrading-che-7.41-to-{prod-ver}-on-red-hat-openshift}
