fix: response to Artem's engineering review

--- a/modules/end-user-guide/pages/selecting-an-ide-by-using-a-url-parameter.adoc
+++ b/modules/end-user-guide/pages/selecting-an-ide-by-using-a-url-parameter.adoc
@@ -12,4 +12,4 @@ You can select your preferred in-browser IDE when starting a new workspace. This
 .Procedure
 
 . Include the URL parameter for the workspace IDE in the URL for starting a new workspace. See xref:url-parameter-for-the-workspace-ide.adoc[].
-. Visit the URL in the address bar of your browser or in the {prod-short} dashboard. See xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[].
+. Visit the URL in the browser. See xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[].
