--- a/modules/end-user-guide/pages/selecting-an-ide-by-using-a-url-parameter.adoc
+++ b/modules/end-user-guide/pages/selecting-an-ide-by-using-a-url-parameter.adoc
@@ -7,7 +7,7 @@
 [id="selecting-an-in-browser-ide-for-a-new-workspace-by-using-a-url-parameter_{context}"]
 = Selecting an in-browser IDE for a new workspace by using a URL parameter
 
-You can select your preferred in-browser IDE when starting a new workspace. This is the easiest way and does not affect your other workspaces or other users.
+You can select your preferred in-browser IDE when starting a new workspace. This is the easiest way and it doesn't affect your other workspaces or other users.
 
 .Procedure
 
