--- a/modules/end-user-guide/pages/url-parameter-for-the-workspace-ide.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-workspace-ide.adoc
@@ -8,7 +8,7 @@
 
 = URL parameter for the workspace IDE
 
-Che-Theia is the default integrated development environment (IDE) that a workspace loads with if no IDE is specified as a URL parameter as part of the URL for starting a new workspace.
+If the URL for starting a new workspace doesn't contain a URL parameter specifying the integrated development environment (IDE), the workspace loads with the default IDE: Che Theia.
 
 The URL parameter for specifying another supported IDE is `che-editor=__<editor_key>__`:
 
