--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -12,8 +12,9 @@
 * xref:customizing-workspace-components.adoc[]
 * xref:selecting-an-ide.adoc[]
 * xref:using-credentials-and-configurations-in-workspaces.adoc[]
-** xref:using-a-git-credentials-store.adoc[]
-** xref:configuring-a-git-provider-access-token.adoc[]
+** xref:using-git-credentials.adoc[]
+*** xref:git-credentials-store.adoc[]
+*** xref:git-provider-access-token.adoc[]
 ** xref:enabling-artifact-repositories-in-a-restricted-environment.adoc[]
 *** xref:enabling-maven-artifact-repositories.adoc[]
 *** xref:enabling-gradle-artifact-repositories.adoc[]
