--- a/modules/end-user-guide/pages/git-credentials-store.adoc
+++ b/modules/end-user-guide/pages/git-credentials-store.adoc
@@ -1,12 +1,12 @@
-:navtitle: Using a Git credentials store
-:description: Using a Git credentials store
-:keywords: user-guide, configuring, user, secrets
-:page-aliases: 
+:navtitle: Git credentials store
+:description: Git credentials store
+:keywords: credentials-store
+:page-aliases: using-a-git-credentials-store.adoc
 
-[id="using-a-git-credential-store_{context}"]
+[id="using-a-git-credentials-store_{context}"]
 = Using a Git credentials store
 
-As an alternative to the xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth for GitHub, GitLab, or Bitbucket] that is configured by the administrator of your organization's {prod-short} instance, you can apply your Git credentials store as a {kubernetes} Secret.
+If the administrator of your organization's {prod-short} instance has not configured xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth for GitHub, GitLab, or Bitbucket], you can apply your Git credentials store as a {kubernetes} Secret.
 
 Apply the {kubernetes} Secret in your user {orch-namespace} of the {orch-name} cluster of your organization's {prod-short} instance.
 
@@ -14,9 +14,9 @@ When you apply the Secret, a Git configuration file with the path to the mounted
 
 .Prerequisites
 
-* An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
+* An active `{orch-cli}` session, with administrative permissions, to the {orch-name} cluster. See {orch-cli-link}.
 
-* link:https://www.gnu.org/software/coreutils/base64[`base64`] command line tools are installed in the operating system you are using.
+* The link:https://www.gnu.org/software/coreutils/base64[`base64`] command line tools are installed in the operating system you are using.
 
 .Procedure
 
@@ -75,9 +75,9 @@ data:
 You can create and apply multiple Git credentials Secrets in your user {orch-namespace}. All of them will be copied into one Secret that will be mounted to the `{devworkspace}` containers. For example, if you set the mount path to `/etc/secret`, then the one Secret with all of your Git credentials will be mounted at `/etc/secret/credentials`. You must set all Git credentials Secrets in your user {orch-namespace} to the same mount path. You can set the mount path to an arbitrary path because the mount path will be automatically set in the Git configuration file configured at `/etc/gitconfig`.
 ====
 
-. Apply the Secret:
+. Apply the Secret.
 +
-[subs="+quotes,+attributes,+macros"]
+[source,terminal,subs="+quotes,+attributes,+macros"]
 ----
 $ {orch-cli} apply -f - <<EOF
 __<Secret_prepared_in_the_previous_step>__
