--- a/modules/end-user-guide/pages/authenticating-yourself-to-a-git-server-from-a-workspace.adoc
+++ b/modules/end-user-guide/pages/authenticating-yourself-to-a-git-server-from-a-workspace.adoc
@@ -9,11 +9,13 @@
 
 In a workspace, you can run Git commands that require user authentication like cloning a remote private Git repository or pushing to a remote public or private Git repository.
 
-To configure user authentication to a Git server from a workspace, {prod-short} provides two options:
+User authentication to a Git server from a workspace can be configured by the administrator or user:
 
 * Your administrator sets up an xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth application on GitHub, GitLab, or Bitbucket] for your organization's {prod} instance.
 
-* You create your own, user xref:using-a-git-credentials-store.adoc[{kubernetes} Secret for a Git credentials store].
+* As a user, you create and apply your own {kubernetes} Secret for your Git credentials store or access token:
+** xref:git-credentials-store.adoc[Git credentials store]
+** xref:git-provider-access-token.adoc[Git provider access token]
 
 .Additional resources
 * xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[Administration Guide: OAuth for GitHub, GitLab, or Bitbucket]
