fix: add more info from the SMEs

--- a/modules/end-user-guide/pages/git-credentials-store.adoc
+++ b/modules/end-user-guide/pages/git-credentials-store.adoc
@@ -8,6 +8,8 @@
 
 If the administrator of your organization's {prod-short} instance has not configured xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth for GitHub, GitLab, or Bitbucket], you can apply your Git credentials store as a {kubernetes} Secret.
 
+Mounting your Git credentials store as a Secret results in the {devworkspace} Operator applying your Git credentials to the `.gitconfig` file in the workspace container.
+
 Apply the {kubernetes} Secret in your user {orch-namespace} of the {orch-name} cluster of your organization's {prod-short} instance.
 
 When you apply the Secret, a Git configuration file with the path to the mounted Git credentials store is automatically configured and mounted to the `{devworkspace}` containers in the cluster at `/etc/gitconfig`. This makes your Git credentials store available in your workspaces.
