--- a/modules/end-user-guide/pages/git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/git-provider-access-token.adoc
@@ -8,6 +8,8 @@
 
 If the administrator of your organization's {prod-short} instance has not configured xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth for GitHub, GitLab, or Bitbucket], you can apply your personal access token as a {kubernetes} Secret.
 
+Mounting your access token as a Secret enables the {prod-short} Server to access the remote repository that is cloned during workspace creation, including access to the repository's `/.che` and `/.vscode` folders.
+
 Apply the {kubernetes} Secret in your user {orch-namespace} of the {orch-name} cluster of your organization's {prod-short} instance.
 
 After you have applied the Secret, you can create new workspaces from a private GitHub, GitLab, or Bitbucket-server repository.
