--- a/modules/end-user-guide/pages/using-git-credentials.adoc
+++ b/modules/end-user-guide/pages/using-git-credentials.adoc
@@ -6,4 +6,4 @@
 [id="using-git-credentials_{context}"]
 = Using Git credentials
 
-As an alternative to the xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth for GitHub, GitLab, or Bitbucket] that is configured by the administrator of your organization's {prod-short} instance, you can apply your Git credentials, a xref:git-credentials-store.adoc[credentials store] or xref:git-provider-access-token.adoc[access token], as a {kubernetes} Secret.
+As an alternative to the xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth for GitHub, GitLab, or Bitbucket] that is configured by the administrator of your organization's {prod-short} instance, you can apply your Git credentials, a xref:git-credentials-store.adoc[credentials store] and xref:git-provider-access-token.adoc[access token] as {kubernetes} Secrets.
