fix: response to Robert's review

--- a/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
+++ b/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
@@ -1,11 +1,11 @@
 :_content-type: CONCEPT
-:description: Authenticating yourself to a Git server from a workspace
+:description: Authenticating to a Git server from a workspace
 :keywords: authentication, authenticate, github, gitlab, bitbucket
-:navtitle: Authenticating yourself to a Git server from a workspace
+:navtitle: Authenticating to a Git server from a workspace
 // :page-aliases:
 
-[id="authenticating-yourself-to-a-git-server-from-a-workspace_{context}"]
-= Authenticating yourself to a Git server from a workspace
+[id="authenticating-to-a-git-server-from-a-workspace_{context}"]
+= Authenticating to a Git server from a workspace
 
 In a workspace, you can run Git commands that require user authentication like cloning a remote private Git repository or pushing to a remote public or private Git repository.
 
@@ -13,10 +13,8 @@ User authentication to a Git server from a workspace can be configured by the ad
 
 * Your administrator sets up an xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth application on GitHub, GitLab, or Bitbucket] for your organization's {prod} instance.
 
-* As a user, you create and apply your own {kubernetes} Secret for your Git credentials store or access token:
-** xref:git-credentials-store.adoc[Git credentials store]
-** xref:git-provider-access-token.adoc[Git provider access token]
+* As a user, you create and apply your own {kubernetes} Secrets for your xref:using-git-credentials.adoc[Git credentials store and access token].
 
 .Additional resources
 * xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[Administration Guide: OAuth for GitHub, GitLab, or Bitbucket]
-* xref:using-a-git-credentials-store.adoc[User Guide: Using a Git credentials store]
+* xref:using-git-credentials.adoc[User Guide: Using Git credentials]
