--- a/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
+++ b/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
@@ -25,9 +25,7 @@ You can create permanent mount points for various components:
 * AWS authorization tokens
 * Configuration files
 * Persistent storage
-* Git credentials
-** xref:git-credentials-store.adoc[Git credentials store files]
-** xref:git-provider-access-token.adoc[Git provider access tokens]
+* xref:using-git-credentials.adoc[Git credentials]
 
 .Additional resources
 
