--- a/modules/end-user-guide/partials/proc_using-a-git-credentials-store.adoc
+++ b/modules/end-user-guide/partials/proc_using-a-git-credentials-store.adoc
@@ -1,7 +1,4 @@
-:navtitle: Git credentials store
-:description: Git credentials store
-:keywords: credentials-store
-:page-aliases: using-a-git-credentials-store.adoc
+:parent-context-of-using-a-git-credentials-store: {context}
 
 [id="using-a-git-credentials-store_{context}"]
 = Using a Git credentials store
@@ -24,7 +21,7 @@ When you apply the Secret, a Git configuration file with the path to the mounted
 
 . In your home directory, locate and open your `.git-credentials` file if you already have it. Alternatively, if you do not have this file, save a new `.git-credentials` file, using the link:https://git-scm.com/docs/git-credential-store#_storage_format[Git credentials storage format]. Each credential is stored on its own line in the file:
 +
-[subs="+quotes,+attributes,+macros"]
+[subs="+quotes,+attributes"]
 ----
 https://__<username>__:__<token>__@__<git_server_hostname>__
 ----
@@ -53,7 +50,7 @@ pass:a,c,q[https://trailblazer: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@github.c
 
 . Create a new {orch-name} Secret in your user {orch-namespace}.
 +
-[source,yaml,subs="+quotes,+attributes,+macros"]
+[source,yaml,subs="+quotes,+attributes"]
 ----
 apiVersion: v1
 kind: Secret
@@ -79,9 +76,11 @@ You can create and apply multiple Git credentials Secrets in your user {orch-nam
 
 . Apply the Secret.
 +
-[source,terminal,subs="+quotes,+attributes,+macros"]
+[source,terminal,subs="+quotes,+attributes"]
 ----
 $ {orch-cli} apply -f - <<EOF
 __<Secret_prepared_in_the_previous_step>__
 EOF
 ----
+
+:context: {parent-context-of-using-a-git-credentials-store}
