--- a/modules/end-user-guide/pages/using-git-credentials.adoc
+++ b/modules/end-user-guide/pages/using-git-credentials.adoc
@@ -1,9 +1,14 @@
+//_content-type: ASSEMBLY
 :navtitle: Using Git credentials
 :description: Using Git credentials
-:keywords: git, git-credentials
-:page-aliases: 
+:keywords: Git, credentials, Git-credentials
+:page-aliases: using-a-Git-credentials-store.adoc
 
 [id="using-git-credentials_{context}"]
 = Using Git credentials
 
-As an alternative to the xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth for GitHub, GitLab, or Bitbucket] that is configured by the administrator of your organization's {prod-short} instance, you can apply your Git credentials, a xref:git-credentials-store.adoc[credentials store] and xref:git-provider-access-token.adoc[access token] as {kubernetes} Secrets.
+As an alternative to the xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth for GitHub, GitLab, or Bitbucket] that is configured by the administrator of your organization's {prod-short} instance, you can apply your Git credentials, a credentials store and access token, as {kubernetes} Secrets.
+
+include::partial$proc_using-a-git-credentials-store.adoc[leveloffset=+1]
+
+include::partial$proc_using-a-git-provider-access-token.adoc[leveloffset=+1]
