--- a/modules/end-user-guide/pages/url-parameter-for-the-workspace-ide.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-workspace-ide.adoc
@@ -1,7 +1,7 @@
 :_content-type: CONCEPT
 :navtitle: URL parameter for the workspace IDE
 :description: URL parameter for the workspace IDE
-:keywords: url, urls, parameter, parameters, starting, start, workspace, workspaces, url-parameter, url-parameters, multiple-url-parameters, combine-url-parameters, several-url-parameters, add-url-parameters, concatenate, concatenate-multiple-URL-parameters, concatenate-URL-parameters, concatenating, concatenating-multiple-URL-parameters, concatenating-URL-parameters, concatenation, start-duplicate-workspaces, start-duplicated-workspaces, duplicate-workspace, duplicate-workspaces, duplicated-workspace, duplicated-workspaces, how-to-start-a-duplicate, how-to-start-duplicate, devfile, override-devfile-file-name, override-file-name, file-name, devfile-name, different-devfile-name, file-path, devfile-path, devfile-file-path, devfile-path-parameter, devfile-file-path-parameterdevfile, file-path, devfile-path, devfile-file-path, devfile-path-parameter, devfile-file-path-parameter
+:keywords: ide, editor, workspace-ide, workspace-editor
 // :page-aliases:
 
 [id="url-parameter-for-the-workspace-ide_{context}"]
