fix: reviewed and edited https://github.com/eclipse-che/che-docs/pull/2383/ (#2401)

--- a/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
+++ b/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
@@ -10,7 +10,7 @@ You can use your credentials and configurations in your workspaces.
 
 To do so, mount your credentials and configurations to the `{devworkspace}` containers in the {orch-name} cluster of your organization's {prod-short} instance:
 
-* Mount your credentials and sensitive configurations as {kubernetes} xref:mounting-secrets.adoc[Secrets]. One example is a xref:using-a-git-credentials-store.adoc[Git credentials store].
+* Mount your credentials and sensitive configurations as {kubernetes} xref:mounting-secrets.adoc[Secrets].
 
 * Mount your non-sensitve configurations as {kubernetes} xref:mounting-configmaps.adoc[ConfigMaps].
 
@@ -25,7 +25,7 @@ You can create permanent mount points for various components:
 * AWS authorization tokens
 * Configuration files
 * Persistent storage
-* Git credentials store files
+* xref:using-git-credentials.adoc[Git credentials]
 
 .Additional resources
 
