--- a/modules/end-user-guide/partials/proc_using-a-git-credentials-store.adoc
+++ b/modules/end-user-guide/partials/proc_using-a-git-credentials-store.adoc
@@ -1,12 +1,11 @@
-:navtitle: Using a Git credentials store
-:description: Using a Git credentials store
-:keywords: user-guide, configuring, user, secrets
-:page-aliases: 
+:parent-context-of-using-a-git-credentials-store: {context}
 
-[id="using-a-git-credential-store_{context}"]
+[id="using-a-git-credentials-store_{context}"]
 = Using a Git credentials store
 
-As an alternative to the xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth for GitHub, GitLab, or Bitbucket] that is configured by the administrator of your organization's {prod-short} instance, you can apply your Git credentials store as a {kubernetes} Secret.
+If the administrator of your organization's {prod-short} instance has not configured xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth for GitHub, GitLab, or Bitbucket], you can apply your Git credentials store as a {kubernetes} Secret.
+
+Mounting your Git credentials store as a Secret results in the {devworkspace} Operator applying your Git credentials to the `.gitconfig` file in the workspace container.
 
 Apply the {kubernetes} Secret in your user {orch-namespace} of the {orch-name} cluster of your organization's {prod-short} instance.
 
@@ -14,15 +13,15 @@ When you apply the Secret, a Git configuration file with the path to the mounted
 
 .Prerequisites
 
-* An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
+* An active `{orch-cli}` session, with administrative permissions, to the {orch-name} cluster. See {orch-cli-link}.
 
-* link:https://www.gnu.org/software/coreutils/base64[`base64`] command line tools are installed in the operating system you are using.
+* The link:https://www.gnu.org/software/coreutils/base64[`base64`] command line tools are installed in the operating system you are using.
 
 .Procedure
 
 . In your home directory, locate and open your `.git-credentials` file if you already have it. Alternatively, if you do not have this file, save a new `.git-credentials` file, using the link:https://git-scm.com/docs/git-credential-store#_storage_format[Git credentials storage format]. Each credential is stored on its own line in the file:
 +
-[subs="+quotes,+attributes,+macros"]
+[subs="+quotes,+attributes"]
 ----
 https://__<username>__:__<token>__@__<git_server_hostname>__
 ----
@@ -51,7 +50,7 @@ pass:a,c,q[https://trailblazer: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@github.c
 
 . Create a new {orch-name} Secret in your user {orch-namespace}.
 +
-[source,yaml,subs="+quotes,+attributes,+macros"]
+[source,yaml,subs="+quotes,+attributes"]
 ----
 apiVersion: v1
 kind: Secret
@@ -75,11 +74,13 @@ data:
 You can create and apply multiple Git credentials Secrets in your user {orch-namespace}. All of them will be copied into one Secret that will be mounted to the `{devworkspace}` containers. For example, if you set the mount path to `/etc/secret`, then the one Secret with all of your Git credentials will be mounted at `/etc/secret/credentials`. You must set all Git credentials Secrets in your user {orch-namespace} to the same mount path. You can set the mount path to an arbitrary path because the mount path will be automatically set in the Git configuration file configured at `/etc/gitconfig`.
 ====
 
-. Apply the Secret:
+. Apply the Secret.
 +
-[subs="+quotes,+attributes,+macros"]
+[source,terminal,subs="+quotes,+attributes"]
 ----
 $ {orch-cli} apply -f - <<EOF
 __<Secret_prepared_in_the_previous_step>__
 EOF
 ----
+
+:context: {parent-context-of-using-a-git-credentials-store}
