--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -8,12 +8,11 @@
 ** xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[]
 ** xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[]
 ** xref:basic-actions-you-can-perform-on-a-workspace.adoc[]
-** xref:authenticating-yourself-to-a-git-server-from-a-workspace.adoc[]
+** xref:authenticating-to-a-git-server-from-a-workspace.adoc[]
 * xref:customizing-workspace-components.adoc[]
 * xref:selecting-an-ide.adoc[]
 * xref:using-credentials-and-configurations-in-workspaces.adoc[]
-** xref:using-a-git-credentials-store.adoc[]
-** xref:configuring-a-git-provider-access-token.adoc[]
+** xref:using-git-credentials.adoc[]
 ** xref:enabling-artifact-repositories-in-a-restricted-environment.adoc[]
 *** xref:enabling-maven-artifact-repositories.adoc[]
 *** xref:enabling-gradle-artifact-repositories.adoc[]
