fixup! chore: Add instructions how to add a manuall PAT secret

--- a/modules/end-user-guide/partials/proc_using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/partials/proc_using-a-git-provider-access-token.adoc
@@ -53,7 +53,10 @@ type: Opaque
 <1> Your Che user ID. You can retrieve `__<che-endpoint>__/api/user` to get the Che user data.
 <2> The Git provider name: `github` or `gitlab` or `bitbucket-server`.
 <3> The Git provider URL.
-<4> Your Git provider user ID.
+<4> Your Git provider user ID, follow the API documentation to retrieve the user object:
+* GitHub: https://docs.github.com/en/rest/users/users#get-a-user.
+* GitLab: https://docs.gitlab.com/ee/api/users.html#for-normal-users.
+* Bitbucket Server: https://developer.atlassian.com/server/bitbucket/rest/v802/api-group-users/#api-users-userslug-get. Get the `account_id` value.
 
 . Apply the Secret.
 +
