--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -9,7 +9,7 @@
 = Installing {prod-short} on Minikube with {identity-provider} as OIDC Identity Provider
 
 This article explains how to create a single-node {kubernetes} cluster with Minikube to deploy {prod-short} and
-configure it to use {identity-provider} as OIDC identity provider.
+configure it to use {identity-provider} as the OIDC identity provider.
 
 WARNING: Remember that single-node {kubernetes} clusters are suited only for testing or development. Do *NOT* use such clusters to run {prod-short} for organizations or developer teams.
 
